fix: adjust padding-left in shipping info section
The padding-left was set to 0px causing misalignment with other elements. Changed to 5px to maintain consistent spacing.

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ body {
   border-top: 1px solid #000;
   flex: 0.33333;
   padding: 5px;
-  padding-left: 0px;
+  padding-left: 5px;
 }
 
 .shipping-info {
